--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
       env: 
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
       run: |
-        pod trunk push <YOURLIBRARY>.podspec
+        pod trunk push Test_Framework.podspec
